<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rest Client Template</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Log in</string>
    <string name="compose">compose</string>
    <string name="compose_btn">compose Tweet</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="tv_tweet_item_firstname">FirstName</string>
    <string name="tv_tweet_item_username">\@username</string>
    <string name="tv_tweet_item_tweet">tweet</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="bt_compose_cancel">Cancel</string>
    <string name="bt_compose_tweet">Tweet</string>
    <string name="tv_compose_char_left_label"> char left</string>
    <string name="tv_compose_char_left">140</string>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tv_profile_status">mystatus</string>
    <string name="tv_profile_firstname">firstName</string>
    <string name="tv_profile_following">0 Following</string>
    <string name="tv_profile_followers">0 Followers</string>
    <string name="tv_profile_item_tweet">my Tweet</string>
    <string name="tv_profile_item_firstname">First Name</string>
    <string name="profile">Profile</string>
</resources>