<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ComposeActivity" >

    <Button
        android:id="@+id/bt_compose_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_compose_post_tweet"
        android:layout_below="@+id/et_compose_post_tweet"
        android:onClick="onCancel"
        android:layout_marginTop="20dp"
        android:text="@string/bt_compose_cancel" />

    <Button
        android:id="@+id/bt_compose_tweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt_compose_cancel"
        android:layout_alignBottom="@+id/bt_compose_cancel"
        android:layout_alignRight="@+id/et_compose_post_tweet"
        android:layout_below="@+id/et_compose_post_tweet"
        android:onClick="onTweet"
        android:text="@string/bt_compose_tweet" />

    <EditText
        android:id="@+id/et_compose_post_tweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_compose_char_left"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLength="140" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_compose_char_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/tv_compose_char_left_label"
        android:layout_marginTop="19dp"
        android:text="@string/tv_compose_char_left"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tv_compose_char_left_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_compose_post_tweet"
		android:layout_marginLeft="5dp"
        android:layout_alignRight="@+id/et_compose_post_tweet"
        android:text="@string/tv_compose_char_left_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
